--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -31,6 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  supabase_flutter: ^1.4.3
+  flutter_dotenv: ^5.0.2
+
+  
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
