--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -10,15 +10,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  supabase_flutter: ^1.4.3
-
   cupertino_icons: ^1.0.8
+  firebase_core: ^2.30.0
+  firebase_auth: ^4.17.4
+  cloud_firestore: ^4.17.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
 
-
-
+flutter:
+  uses-material-design: true
+  assets:
+    - image/apartment1.jpg
+    - image/apartment2.jpg
+    - image/apartment3.jpg
