--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   firebase_core: ^2.30.0
   firebase_auth: ^4.17.4
   cloud_firestore: ^4.17.4
+  image_picker: ^1.1.2
+  firebase_storage: ^11.7.7
+  file_picker: ^8.0.7
 
 dev_dependencies:
   flutter_test:
