--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -17,6 +17,12 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^11.7.7
   file_picker: ^8.0.7
+  path_provider: ^2.1.5
+  pdf: ^3.11.3
+  intl: ^0.20.2
+  printing: ^5.13.1
+  open_file: ^3.5.4
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
