--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -11,18 +11,17 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  firebase_core: ^2.30.0
-  firebase_auth: ^4.17.4
-  cloud_firestore: ^4.17.4
+  firebase_core: ^3.14.0
+  firebase_auth: ^5.0.0
+  cloud_firestore: 5.6.12
   image_picker: ^1.1.2
-  firebase_storage: ^11.7.7
+  firebase_storage: ^12.0.0
   file_picker: ^8.0.7
   path_provider: ^2.1.5
   pdf: ^3.11.3
   intl: ^0.20.2
   printing: ^5.13.1
-  open_file: ^3.5.4
-  fluttertoast: ^8.2.8
+  fluttertoast: ^8.2.9
 
 dev_dependencies:
   flutter_test:
