--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   intl: ^0.20.2
   printing: ^5.13.1
   fluttertoast: ^8.2.9
+  uuid: ^4.5.1
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
