--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   http: ^1.4.0
   lottie: ^3.3.1
   page_transition: ^2.2.1
+  shared_preferences: ^2.5.3
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
